# temp-detector-graffiti

./: .gitignore  .pre-commit-config.yaml  Inference.py  README.md  commands.py  convert_to_onnx.py  dataset.dvc  dataset.zip.dvc  fine-tuning.ipynb  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data_loading/: big_dataset.yaml  data_loading.yaml  difficult_dataset.yaml  normal_dataset.yaml
conf/data_processing/: data_processing.yaml
conf/data_splitting/: data_splitting.yaml
conf/data_validation/: data_validation.yaml
conf/fine-tuning/: fine-tuning.yaml
conf/fine_tuning/: fine_tuning.yaml
conf/freeze_layers/: freeze_layers.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: ft_model.yaml  model.yaml
conf/onnx-converter/: onnx-converter.yaml
conf/onnx_converter/: onnx_converter.yaml
conf/validation/: validation.yaml
data/: .gitignore  17k_Graffiti.v1i.yolov11.dvc  17k_Graffiti.v1i.yolov11.zip.dvc  Graffiti Detection.v1i.yolov11.dvc  Graffiti Detection.v1i.yolov11.zip.dvc  train.v13i.yolov11.dvc  train.v13i.yolov11.zip.dvc
datasets/: .gitignore  big_dataset.zip.dvc  difficult_dataset.zip.dvc  normal_dataset.zip.dvc
detector_graffiti/: __init__.py  cli.py  commands.py  convert_dataset.py
detector_graffiti/compute_metrics/: compute_metrics.py
detector_graffiti/convert_dataset/: convert_yolo_to_json.py  process_datasets.py  split_dataset.py  utils.py  validate.py
detector_graffiti/dataloader/: dataset.py  utils.py
detector_graffiti/fine-tuning/: fine-tuning.py
detector_graffiti/fine_tuning/: fine_tuning.py
detector_graffiti/freeze_layers/: freeze_layers.py
detector_graffiti/grounding_dino_trainer/: trainer.py
detector_graffiti/inference/: inference.py
detector_graffiti/logging/: logging.py
detector_graffiti/onnx_converter/: convert_to_onnx.py
detector_graffiti/validation/: validation.py
