[project]
name = "detector-graffiti"
version = "0.1.0"
description = "The graffiti detector, based on the Grounding DINO model, recognizes drawings and inscriptions on the walls of buildings, divides them into good and bad, and issues detections to the user."
authors = [
    {name = "GoenkoAlina", email = "a.goenko@g.nsu.ru"},
    {name = "DashaMed555", email = "DashaMed555@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [
    { include = "detector_graffiti"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
graffiti-detector = "commands:cli"

[tool.poetry.dependencies]
torch = "^2.0.0"
transformers = "4.54.1"
numpy = "^1.24.0"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
hydra-core = {version = "^1.3.0", extras = ["colorlog"]}
omegaconf = "^2.3"
click = "^8.3.1"
accelerate = ">=0.26.0"
tensorboard = "^2.20.0"
scipy = "^1.17.0"
cryptography = ">=43.0.0,<47"
pyopenssl = "^24.0.0"
mlflow = "^3.8.1"

[tool.poetry.group.dev.dependencies]
dvc = {version = "^3.0.0", extras = ["gdrive"]}
pre-commit = "^3.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
onnx = "^1.14.0"
onnxruntime = "^1.15.0"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 79
